fix z-index for home buttons ,fix skills buttons animation

--- a/style/style.css
+++ b/style/style.css
@@ -61,7 +61,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 1;
+  z-index: 0;
   pointer-events: none;
   /* Allow clicks to pass through */
 }
@@ -70,4 +70,10 @@ body {
   position: relative;
   z-index: 2;
   /* Ensure content is above canvas */
+}
+
+#home_buttons, 
+#large-header .md\:w-1\/2 {
+  position: relative;
+  z-index: 2; /* ensure above canvas */
 }
